clusters/home/traefik/traefik-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-load
  namespace: traefik
  annotations:
    metallb.universe.tf/address-pool: metallb
spec:
  selector:
    name: traefik
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP from its pool if not
  # specified. You can also specify one manually.
  # loadBalancerIP: x.y.z.a
  ports:
    - name: http
      protocol: TCP
      nodePort: 30599
      port: 8080
      targetPort: http
