clusters/home/traefik/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  rules:
    - host:
      http:
        paths:
          - path: /traefik
            pathType: Prefix
            backend:
              service:
                name:  traefik
                port:
                  number: 8080
